# LearningNotes

./: .gitignore  README.md  linux_commands.md
AudioSampler/: CMakeLists.txt
AudioSampler/src/: main.cpp
AudioSampler/src/bean/: datadef.h
AudioSampler/src/datacache/: datacache.h
AudioSampler/src/datareader/: datareader.cpp  datareader.h
AudioSampler/src/datasender/: datasender.cpp  datasender.h
AudioSampler/src/logger/: logger.h
AudioSampler/src/server/: server.cpp  server.h
AudioSampler/src/utils/: utils.cpp  utils.h
CPP11/: cpp11.md  cpp_program_notes.md  (+1 more)
CPP_Template/code_snipepet/: CMakeLists.txt  nontype_template.cc  struct_member_pointer.cc  template_reference.cc  test.cc  use_bit_field.cc  use_bitset_reference.cc  use_integer_sequence.cc  use_integral_constant.cc  use_is_object.cc  use_is_scalar.cc
WorkNotes/Encrypt/: CMakeLists.txt  main.cpp
WorkNotes/Encrypt/bean/: common_type.h
WorkNotes/Encrypt/encryptdog/: encryptdog.cpp  encryptdog.h
WorkNotes/Encrypt/enctool/: enctool.cpp  enctool.h
WorkNotes/Encrypt/http/: httplib.h  httpmanager.cpp  httpmanager.h
WorkNotes/Encrypt/usbmanager/: usbmanager.cpp  usbmanager.h
WorkNotes/Encrypt/utils/bytearray/: bytearray.cpp  bytearray.h
WorkNotes/Encrypt/utils/codec/: crc.cpp  crc.h  framecodec.cpp  framecodec.h
WorkNotes/Encrypt/utils/datahandler/: datahandler.cpp  datahandler.h
WorkNotes/Encrypt/utils/encrypt/: encryptor.cpp  encryptor.h
WorkNotes/Encrypt/utils/encryptdog/: encryptdog.cpp  encryptdog.h
WorkNotes/Encrypt/utils/hostinfo/: hostinfo.cpp  hostinfo.h
WorkNotes/Encrypt/utils/http/: httpmanager.cpp  httpmanager.h
WorkNotes/Encrypt/utils/logger/: logger.h
WorkNotes/Encrypt/utils/singleinstance/: singleinstance.h
WorkNotes/Encrypt/utils/usbmanager/: usbmanager.cpp  usbmanager.h
WorkNotes/Encryptor/: CMakeLists.txt
WorkNotes/Encryptor/include/: encryptor.cpp  encryptor.h
WorkNotes/Encryptor/install/include/: encryptor.h
WorkNotes/Encryptor/install/lib/cmake/EncryptorTool/: EncryptorTool-config-debug.cmake  EncryptorTool-config.cmake
WorkNotes/Encryptor/src/bean/: commomtype.h
WorkNotes/Encryptor/src/test/: main.cpp
WorkNotes/Encryptor/src/utils/aes/: encry_aes.h
WorkNotes/Encryptor/src/utils/hostinfo/: hostinfo.cpp  hostinfo.h
WorkNotes/Encryptor/src/utils/keymanager/: keymanager.cpp  keymanager.h
WorkNotes/Encryptor/src/utils/logger/: logger.h  utils.cpp  utils.h
WorkNotes/Encryptor/src/utils/usbmanager/: iohelper.cpp  iohelper.h  iomanager.cpp  iomanager.h  usbdevice.cpp  usbdevice.h  usbinfo.cpp  usbinfo.h  usblistener.cpp  usblistener.h  usbmanager.cpp  usbmanager.h
WorkNotes/Encryptor/test_codec/: CMakeLists.txt  encry_aes.cpp  encry_aes.h  main.cpp
WorkNotes/audio-conllect/: CMakeLists.txt
WorkNotes/audio-conllect/modules/: publish_release.cmake
WorkNotes/audio-conllect/modules/codecengine/: customcodeengine.cpp  customcodeengine.h  src.cmake
WorkNotes/audio-conllect/modules/codecengine/bean/: datareader.cpp  datareader.h  fpgacontroldata.h  fpgadatareader.cpp  fpgadatareader.h  hostdata.h  sensordata.h
WorkNotes/audio-conllect/modules/listener/: datanotifier.h  dataobserver.h  iniproperty.h  mutableproperty.h  observerproperty.h
WorkNotes/audio-conllect/modules/singleinstance/: singleinstancecontrol.cpp  singleinstancecontrol.h  src.cmake
WorkNotes/audio-conllect/modules/viewdebug/: filewatcher.cpp  filewatcher.h  hotloaduitool.cpp  hotloaduitool.h
WorkNotes/audio-conllect/src/linux/: CMakeLists.txt  main.cpp
WorkNotes/audio-conllect/src/linux/utils/: arrayobjectcache.h  configadc.cpp  configadc.h  transfermanager.cpp  transfermanager.h  uploaddatathr.cpp  uploaddatathr.h
WorkNotes/audio-conllect/src/test/: CMakeLists.txt  send_file.cpp
WorkNotes/audio-conllect/src/usb/: iohelper.cpp  iohelper.h  usb.cmake  usbdevice.cpp  usbdevice.h  usblistener.cpp  usbmanager.cpp  usbmanager.h
WorkNotes/audio-conllect/src/windows/: CMakeLists.txt  app.cpp  app.h  app.qrc  app.ui  app_translate.qrc  main.cpp
WorkNotes/audio-conllect/src/windows/dialog/: connecttoserverdlg.cpp  connecttoserverdlg.h  connecttoserverdlg.ui
WorkNotes/audio-conllect/src/windows/res/: app.rc  app.rc.in  install.nsi.in  resource.h
WorkNotes/audio-conllect/src/windows/utils/: appsettings.cpp  appsettings.h
WorkNotes/audio-conllect/test/unittest/: CMakeLists.txt  main.cpp
WorkNotes/audio-conllect/test/unittest/tester/: unittest.cpp  unittest.h
WorkNotes/audio-conllect/test/usbtest/: CMakeLists.txt  main.cpp
buganalyse/bugger/: CMakeLists.txt
buganalyse/bugger/src/: CMakeLists.txt  app.qrc  main.cpp
buganalyse/bugger/src/app/: app.cpp  app.h  app.ui
buganalyse/bugger/src/dialog/: login.ui
buganalyse/bugger/src/dialog/info/: infodlg.cpp  infodlg.h  infodlg.ui
buganalyse/bugger/src/dialog/login/: login.ui  logindlg.cpp  logindlg.h
buganalyse/bugger/src/logger/: logger.h
buganalyse/bugger/src/pages/commands/: commandpage.cpp  commandpage.h  commandpage.ui
buganalyse/bugger/src/utils/: macros.h  utils.cpp  utils.h
buganalyse/bugger/src/utils/frame/: windowframelesshelper.cpp  windowframelesshelper.h
buganalyse/bugger/src/utils/session/: channelsession.cpp  channelsession.h  scpsession.cpp  scpsession.h  session.cpp  session.h  sftpsession.cpp  sftpsession.h
buganalyse/bugger/src/utils/sessionmanager/: sessionmanager.cpp  sessionmanager.h
buganalyse/bugger/src/utils/ssh/: session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  sshtask.cpp  sshtask.h  taskexecutor.cpp  taskexecutor.h
buganalyse/bugger/src/utils/task/: channelsession.cpp  channelsession.h  macros.h  scpsession.cpp  scpsession.h  session.cpp  session.h  taskentity.cpp  taskentity.h  taskexecutor.cpp  taskexecutor.h  utils.cpp  utils.h
buganalyse/bugger/src/widgets/: custombtngroup.cpp  custombtngroup.h
buganalyse/bugger/src/widgets/frame/: windowframelesshelper.h
buganalyse/bugger/src/widgets/sessioninfo/: fileviewer.cpp  fileviewer.h  fileviewer.ui
buganalyse/bugger/test/: CMakeLists.txt  main.cpp
cmake/GenLibTest/: CMakeLists.txt  macros.h
(+89 files in other folders)
